# bootcamp_python

./: pyproject.toml
bootcamp_python/: main.py
bootcamp_python/Exercicios_Aula_Dois/: exercicio2_1.py  exercicio2_10.py  exercicio2_11.py  exercicio2_12.py  exercicio2_13.py  exercicio2_14.py  exercicio2_15.py  exercicio2_16.py  exercicio2_17.py  exercicio2_18.py  exercicio2_19.py  exercicio2_2.py  exercicio2_20.py  exercicio2_3.py  exercicio2_4.py  exercicio2_5.py  exercicio2_6.py  exercicio2_7.py  exercicio2_8.py  exercicio2_9.py
bootcamp_python/Exercicios_Aula_Quatro/: exercicio4_1.py
bootcamp_python/Exercicios_Aula_Seis/: Exercicio6_1.py  Exercicio6_2.py  Exercicio6_3.py  Exercicio6_4.py
bootcamp_python/Exercicios_Aula_Tres/: exercicio3_1.py  exercicio3_2.py  exercicio3_3.py  exercicio3_4.py  exercicio3_5.py
bootcamp_python/Exercicios_Aula_Um/: exercicio1.py  exercicio2.py  exercicio3.py  exercicio4.py
postgres_practice/: practice.py  sql_alchemy.py
